--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "private": true,
   "scripts": {
-    "test" : "echo \"Error: no test specified\"",
+    "test": "echo \"Error: no test specified\"",
     "start": "node src/server.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/balena-io-projects/simple-server-node#readme",
   "dependencies": {
     "express": "~4.17.1",
+    "onoff": "^6.0.3",
     "serve-favicon": "~2.5.0"
   }
 }
