--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,11 +1,19 @@
 # base-image for node on any machine using a template variable,
 # see more about dockerfile templates here: https://www.balena.io/docs/learn/develop/dockerfile/#dockerfile-templates
 # and about balena base images here: https://www.balena.io/docs/reference/base-images/base-images/
-FROM balenalib/%%BALENA_ARCH%%-node:14-buster-run
+FROM balenalib/%%BALENA_ARCH%%-ubuntu-node:16.19.0-build
 
+RUN apt-get update && apt-get install -y build-essential
+# apt-get install -y build-essential
 # use `install_packages` if you need to install dependencies,
 # for instance if you need git, just uncomment the line below.
 # RUN install_packages git
+RUN install_packages wget git python3
+
+
+RUN node --version
+RUN npm --version
+RUN env 
 
 # Defines our working directory in container
 WORKDIR /usr/src/app
@@ -15,7 +23,7 @@ COPY package*.json ./
 
 # This install npm dependencies on the balena build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm install --production --unsafe-perm && npm cache verify && rm -rf /tmp/*
+RUN JOBS=MAX npm install --unsafe-perm && npm cache verify && rm -rf /tmp/*
 
 # This will copy all files in our root to the working directory in the container
 COPY . ./
